sanger/sites/fadnuclei/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fadnuclei
spec:
  selector:
    matchLabels:
      app: fadnuclei
  replicas: 1
  template:
    metadata: 
      name: fadnuclei
      labels:
        app: fadnuclei
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: fadnuclei-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.12.0
        imagePullPolicy: IfNotPresent
        name: fadnuclei
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/190926_single_nuc_AD.h5ad", "-t", "snRNAseq of human FAD cortex", "-e", "tsne", "--host", "0.0.0.0", "--port", "5005"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "2Gi"
            cpu: 1
