sanger/sites/fadnuclei/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fadnuclei
  labels:
    app: fadnuclei
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fadnuclei
